# sudoku

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: add_test.cmake
src/: CMakeLists.txt
src/naive/: cell.cpp  cell.h  sudoku.cpp  sudoku.h
test/: CMakeLists.txt
test/naive/: test_single_cell.cpp  test_single_slot.cpp  test_sudoku.cpp
test/sudokus/: easy00.txt  easy00_solution.txt  easy01.txt  expert00_unambigous.txt  expert00_unambigous_solution.txt  expert01_ambigous_solution.txt  hard00_ambigous.txt  hard00_ambigous_solution.txt  hard01_unambigous.txt  hard01_unambigous_solution.txt  medium00.txt  medium00_solution.txt  medium01.txt  medium01_solution.txt
